kubernetes/apps/emqx/emqx/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: EMQX
    gethomepage.dev/group: Server
    gethomepage.dev/icon: emqx.svg
    gethomepage.dev/pod-selector: apps.emqx.io/instance=emqx
spec:
  hostnames:
    - emqx.${SECRET_DOMAIN}
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: emqx-dashboard
          port: 18083
